--- a/1º Trabalho Pratico/HTML.html
+++ b/1º Trabalho Pratico/HTML.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <meta charset="utf-8">
     <title> 1º Trabalho Prático</title>
-</head>
+  </head>
 
 <body>
-        <form method="POST" action="PHP.php">
-             <p>Insira o primeiro valor : <input type="text" id="valor1" name="valor1" size="10" maxlength="10"><br />
-             <p>Insira o segundo valor : <input type="text" id="valor2" name="valor2" size="10" maxlength="10"><br />
-             <button id="calcularBtn" type="submit" value="Calcular">Somar</button>
-        </form>
+  <form method="POST" action="PHP.php">
+    <p>Insira o Primeiro Número : <input type="text" id="valor1" name="valor1" size="10" maxlength="10"><br />
+    <p>Insira o Segundo Número : <input type="text" id="valor2" name="valor2" size="10" maxlength="10">
+    <button id="calcularBtn" type="submit" value="Calcular">Calcular</button>
+  </form>
 
-        <div id="resultado">
+<p>Resultado :<div id="resultado">
 
-        </div>
+</div>
 
-        <script
-          src="https://code.jquery.com/jquery-3.4.1.min.js"
-          integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-          crossorigin="anonymous">
-        </script>
+<script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous">
+</script>
 
-        <script src="JS.js">
-        </script>
+<script src="JS.js">
+</script>
         
 </body>
 
